# random_projects

./: .gitignore  README.md
fractal_explorer/: Cargo.toml
fractal_explorer/src/: app.rs  color_palette.rs  fractal.rs  main.rs
hypnotic_spiral/: Cargo.toml
hypnotic_spiral/src/: main.rs
oops_finder/: Cargo.toml  README.md
oops_finder/src/: main.rs
particle_life/: Cargo.toml
particle_life/src/: main.rs  shader.wgsl
trading_algorithms/: Cargo.toml
trading_algorithms/src/: backtest.rs  data.rs  execution.rs  main.rs  models.rs  strategies.rs  utils.rs
word_guesser/: Cargo.toml
word_guesser/src/: main.rs
