[package]
name = "fractal_explorer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An interactive fractal visualization application"
license = "MIT"

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
image = "0.24.6"
rayon = "1.7.0"
num-complex = "0.4.3"
colorgrad = "0.6.2"
rfd = "0.11.4"